docs/tests/typing/bad/testfile-call-1.cpp
void f(int x) {}
int main() { f(); }
